<resources>
    <string name="app_name">nftscmers</string>

<!--    Common Strings -->
    <string name="network_missing">Network Connection Required!</string>
    <string name="unexpected_error">An unexpected error have occurred, please try again!</string>
    <string name="firestore_error">FireStore error</string>

<!--    Login & Sign Up Strings -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="name_hint">Name</string>

    <string name="applicant_login">Applicant Login</string>
    <string name="employer_login">Employer Login</string>
    <string name="login_button">LOG IN NOW</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="logging_in">Logging In</string>
    <string name="login_error">Invalid Login details</string>
    <string name="login_success">Login Successful!</string>
    <string name="not_signed_up">Email is not registered</string>

    <string name="applicant_sign_up">Applicant Sign Up</string>
    <string name="employer_sign_up">Employer Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="signing_up">Signing Up</string>
    <string name="sign_up_success">Sign up successful</string>
    <string name="sign_up_confirm_fail">Password do not match!</string>
    <string name="duplicate_email">Please use another email!</string>


<!--    Edit Profile Strings    -->
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="linked_in">Linkedin Name</string>
    <string name="about">About</string>
    <string name="skills">Skills</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="jobs">Jobs</string>

<!--    Profile Strings -->
    <string name="my_profile">My Profile</string>
    <string name="logout">Log Out</string>
    <string name="company_profile">Company Profile</string>
    <string name="applicant_profile">Applicant Profile</string>

<!--    CreateJobActivity Strings-->
    <string name="job_details">Job Details</string>
    <string name="employer_name">Employer Name</string>
    <string name="job_available">Job Available</string>
    <string name="job_description">Job Description</string>
    <string name="location">Location</string>
    <string name="skills_required">Skills Required</string>
    <string name="tags_required">Tags Required</string>
    <string name="confirm">Confirm</string>
    <string name="back_button">Back Button</string>
    <string name="job_deadline">Job Deadline</string>

<!--    Feedback Strings -->
    <string name="feedback_view">View feedback</string>
    <string name="feedback_set">Give feedback</string>
    <string name="input_feedback">Input feedback</string>
    <string name="submit_feedback">Submit feedback</string>

<!--    History Strings -->
    <string name="application_history">Application History</string>
    <string name="job_history">Job History</string>

<!--    Course Strings -->
    <string name="course_title">Courses available</string>
    <string name="no_courses">Sorry! No courses available at the time</string>

<!--    Access Strings -->
    <string name="camera_access">Camera Access Required</string>
    <string name="storage_access">Storage Access Required</string>

<!--    Extra-->
    <string name="skill_name">Skill Name</string>
    <string name="add">Add</string>
</resources>